--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,10 @@
 
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/swipe-portfolio.css">
+    <link
+      href='https://fonts.googleapis.com/css?family=Roboto:400,700,500,300,900|Roboto+Slab:400,700'
+      rel='stylesheet'
+      type='text/css'>
 
     {{content-for "head-footer"}}
   </head>
