Access and speed improvements

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta lang="en">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Jeffrey Ruder</title>
-    <meta name="description" content="">
+    <title>Jeffrey Ruder Portfolio</title>
+    <meta name="description" content="Portfolio for Jeffrey Ruder">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     {{content-for "head"}}
@@ -12,7 +13,7 @@
     <link rel="stylesheet" href="assets/vendor.css">
     <link rel="stylesheet" href="assets/swipe-portfolio.css">
     <link
-      href='https://fonts.googleapis.com/css?family=Roboto:400,700,500,300,900|Roboto+Slab:400,700'
+      href='https://fonts.googleapis.com/css?family=Roboto:400,700,500,300|Roboto+Slab:400,700'
       rel='stylesheet'
       type='text/css'>
 
